[package]
name = "boxx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdev = { version = "0.5.3", features = ["serialize", "unstable_grab"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
vigem-client = "0.1.4"
